--- a/public/views/includes/navigation.ejs
+++ b/public/views/includes/navigation.ejs
@@ -11,11 +11,17 @@
         </ul>
         <ul class="main-header__item-list">
             <li class="main-header__item">
-                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/orders">Signup</a>
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
             </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
-            </li>
+            <% if (isAuthenticated) { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+                </li>
+                <% } else { %>
+                    <li class="main-header__item">
+                        <a class="<%= path === '/logout' ? 'active' : '' %>" href="/logout">Logout</a>
+                    </li>
+                    <% } %>
         </ul>
     </nav>
 </header>
