--- a/public/views/includes/navigation.ejs
+++ b/public/views/includes/navigation.ejs
@@ -3,7 +3,7 @@
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
             <li class="main-header__item">
-                <a class="<%= path === '/' ? 'active' : '' %>" href="/">User Ranking</a>
+                <a class="<%= path === '/most-liked' ? 'active' : '' %>" href="/">User Ranking</a>
             </li>
             <li class="main-header__item">
                 <a class="<%= path === '/user' ? 'active' : '' %>" href="/user">User Details</a>
