implement csurf protection

--- a/public/views/includes/navigation.ejs
+++ b/public/views/includes/navigation.ejs
@@ -10,16 +10,17 @@
             </li>
         </ul>
         <ul class="main-header__item-list">
-            <li class="main-header__item">
-                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
-            </li>
-            <% if (isAuthenticated) { %>
+            <% if (!isAuthenticated) { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+                </li>
                 <li class="main-header__item">
                     <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
                 </li>
                 <% } else { %>
                     <li class="main-header__item">
-                        <a class="<%= path === '/logout' ? 'active' : '' %>" href="/logout">Logout</a>
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <button type="submit">Logout</button>
                     </li>
                     <% } %>
         </ul>
