use flash middleware to display form error message during login

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,3 +107,19 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  width: 400px;
+  border: 1px solid blue;
+  padding: 0.5rem;
+  border-radius: 3px;
+  background: rgb(199, 199, 240);
+  text-align: center;
+}
+
+.user-message--error {
+  border-color: red;
+  background: rgb(236, 168, 168);
+  color: red;
+}
+
