--- a/public/views/includes/navigation.ejs
+++ b/public/views/includes/navigation.ejs
@@ -19,8 +19,10 @@
                 </li>
                 <% } else { %>
                     <li class="main-header__item">
-                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button type="submit">Logout</button>
+                        <form action="/logout" method="post">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <button type="submit">Logout</button>
+                        </form>
                     </li>
                     <% } %>
         </ul>
