implement update password

--- a/public/views/includes/navigation.ejs
+++ b/public/views/includes/navigation.ejs
@@ -19,6 +19,10 @@
                 </li>
                 <% } else { %>
                     <li class="main-header__item">
+                        <a class="<%= path === '/update-password' ? 'active' : '' %>" href="/update-password">Update
+                            Password</a>
+                    </li>
+                    <li class="main-header__item">
                         <form action="/logout" method="post">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button type="submit">Logout</button>
