show user likes rankings

--- a/public/views/me.ejs
+++ b/public/views/me.ejs
@@ -4,7 +4,7 @@
     <body>
         <%- include('includes/navigation.ejs') %>
 
-            <div class="me-container">
+            <div class="page-container">
                 <h1>About Me</h1>
                 <% if (isAuthenticated) { %>
                     <ul class="about-me-list">
